# BasicECS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ecs.cpp  ecs.hpp  ecs.tpp  test.cpp  test.hpp
BasicECS/include/: componentMap.hpp  ecs.hpp
BasicECS/lib/: libbasicECS.dylib
include/: ecs.hpp
src/: componentMap.hpp  componentMap.tpp  ecs.cpp  ecs.hpp  ecs.tpp
test/: CMakeLists.txt  test.cpp  test.hpp
